# sg7569-cs9223-assgn1

./: .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  LICENSE  NOTES.md  README.md  SECURITY.md  artifact.bundle  bandit-output.txt  main.py  merkle_proof.py  part3-writeup.txt  pyproject.toml  requirements.txt  sg7569_cs9223_assgn1-0.1.0-py3-none-any.whl  util.py  v0_bandit-initial.txt
.github/workflows/: cd.yml  ci.yml  scorecard.yml
assignment1/: __init__.py  artifact.md  main.py  merkle_proof.py  run_analysis.sh  util.py
assignment2/: bandit-final.txt  bandit-initial.txt  mypy.initial.txt  pylint.initial.txt
test_env/: pyvenv.cfg
tests/: test_main.py  test_merkle_proof.py  test_util.py
