[project]
name = "sg7569-cs9223-assgn1"
version = "0.1.0"
description = "Code for software supply chain security assignment 1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.1",
    "pre-commit>=4.3.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "mypy>=1.18.2",
    "pip>=25.2",
    "pylint>=3.3.9",
    "ruff>=0.14.0",
]
