[project]
name = "sg7569-cs9223-assgn1"
version = "0.1.0"
description = "Code for software supply chain security assignment 1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.1",
    "pre-commit>=4.3.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "mypy>=1.18.2",
    "pip>=25.2",
    "pylint>=3.3.9",
    "ruff>=0.14.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=assignment1 --cov-report=term-missing --cov-report=html"

[tool.ruff]
line-length = 120
exclude = ["tests/", ".venv/"]

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

# Added build system configuration
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Explicitly include the package directory
[tool.poetry]
packages = [
    { include = "assignment1" }
]
